prevent text-overflow on contacts-menu

--- a/assets/css/contacts.css
+++ b/assets/css/contacts.css
@@ -133,6 +133,8 @@ html {
     font-weight: 400;
     font-size: 20px;
     margin: 0 0 8px 0;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 .contact-email {
@@ -141,6 +143,8 @@ html {
     font-size: 16px;
     color: #007CEE;
     margin: 0;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 /* style for contact window */
